fix stilos + Dark Mode

--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -528,12 +528,12 @@ video {
   margin-top: 1.5rem;
 }
 
-.mr-24 {
-  margin-right: 6rem;
-}
-
 .mb-8 {
   margin-bottom: 2rem;
+}
+
+.mr-24 {
+  margin-right: 6rem;
 }
 
 .flex {
@@ -542,6 +542,10 @@ video {
 
 .hidden {
   display: none;
+}
+
+.h-screen {
+  height: 100vh;
 }
 
 .h-14 {
@@ -666,6 +670,10 @@ video {
 
 .rounded-full {
   border-radius: 9999px;
+}
+
+.rounded-2xl {
+  border-radius: 1rem;
 }
 
 .rounded-xl {
@@ -980,6 +988,26 @@ video {
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
 
+.dark .dark\:bg-gray-900 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(17 24 39 / var(--tw-bg-opacity));
+}
+
+.dark .dark\:bg-gray-800 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
+}
+
+.dark .dark\:bg-gray-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(55 65 81 / var(--tw-bg-opacity));
+}
+
+.dark .dark\:text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
 @media (min-width: 1024px) {
   .lg\:flex {
     display: flex;
@@ -987,10 +1015,6 @@ video {
 
   .lg\:hidden {
     display: none;
-  }
-
-  .lg\:h-96 {
-    height: 24rem;
   }
 
   .lg\:h-full {
@@ -1007,6 +1031,10 @@ video {
 
   .lg\:w-full {
     width: 100%;
+  }
+
+  .lg\:flex-none {
+    flex: none;
   }
 
   .lg\:flex-col {
@@ -1043,6 +1071,11 @@ video {
 
   .lg\:bg-center {
     background-position: center;
+  }
+
+  .lg\:px-2 {
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
   }
 
   .lg\:px-6 {
